--- a/assets/xhtml/default.html
+++ b/assets/xhtml/default.html
@@ -15,6 +15,7 @@
 			<div class="taglines">Oh hai guys, I re-reimplemented ur music server.</div>
 		</div>
 		<div id="submenu">
+			<!--%LOGIN%-->
 			<div id="submenu-wrapper">
 				<!--%BUTTONS%-->
 				<div class="clear"></div>
