Uploads should add to the database

--- a/assets/xhtml/uploaders.html
+++ b/assets/xhtml/uploaders.html
@@ -21,7 +21,7 @@
 			<input type="button" name="add" value="" />
 		</form>
 	</div>
-	<div id="youtube" class="songbox">
+	<div id="youtube" class="songbox last">
 		<h1>Youchoob</h1>
 		<form action="." method="post" name="youtube">
 			<input type="text" name="youtube" />
