Uploads and style slightly buggy but made progress

--- a/assets/xhtml/uploaders.html
+++ b/assets/xhtml/uploaders.html
@@ -7,7 +7,7 @@
 					<input type="file" name="upload" />
 				</div>
 				<div class="fakefile">
-					<input name="fakefile" />
+					<input name="fakefile" readonly="readonly" />
 					<input type="button" name="add" value="" />
 					<img src="/assets/images/loading_animation.gif" id="loadingAnimation" />
 				</div>
