Added formidable library for better multipart parsing, upgraded to node version 0.1.96

--- a/assets/xhtml/uploaders.html
+++ b/assets/xhtml/uploaders.html
@@ -30,4 +30,4 @@
 	</div>
 </div>
 
-<iframe id="upload_target" name="upload_target" src="#" style="display: none;"></iframe>
+<iframe id="upload_target" name="upload_target" src="/index.njs?iframe=true" style="display: none;"></iframe>
