Removed ifram ajax stuff because it was a pain in the ass

--- a/assets/xhtml/blank.html
+++ b/assets/xhtml/blank.html
@@ -6,5 +6,5 @@
 	<title><!--%TITLE%--></title>
 	<!--%SCRIPTS%-->
 </head>
-<body onload="main();"><!--%BODY%--></body>
+<body><!--%BODY%--></body>
 </html>
