--- a/assets/xhtml/default.html
+++ b/assets/xhtml/default.html
@@ -23,6 +23,7 @@
 		</div>
 		<div id="wrapper">
 			<div class="container contained">
+				<!--%FEEDBACK%-->
 				<!--%MESSAGE%-->
 				<!--%CONTAINER%-->
 			</div>
@@ -31,7 +32,7 @@
 	<div id="footer">
 		<div>
 			<p class="logo"></p>
-			<p>~Fyorl</p>
+			<p><img src="/assets/images/tux.png" alt="Tux!" style="margin-bottom: -4px;" /> Fyorl</p>
 		</div>
 	</div>
 </body>
