--- a/assets/xhtml/uploaders.html
+++ b/assets/xhtml/uploaders.html
@@ -1,7 +1,7 @@
 <div id="uploaders">
 	<div id="fileupload" class="songbox">
 		<h1>Upload</h1>
-		<form action="/upload" method="post" enctype="multipart/form-data" name="fileupload" target="upload_target" id="fileupload_form">
+		<form action="/upload" method="post" enctype="multipart/form-data" name="fileupload" id="fileupload_form">
 			<div class="fileinputs">
 				<div class="filecontainer">
 					<input type="file" name="upload" />
